syntax = "proto3";

package logsentinel;

// option go_package = "github.com/AjayShukla007/logsentinel/proto/gen/proto";

// option go_package = "github.com/AjayShukla007/logsentinel/proto/gen/proto";
option go_package = "github.com/AjayShukla007/logsentinel/proto";

service LogService {
  rpc StreamLogs(LogRequest) returns (stream LogResponse) {}
  rpc SendLog(LogRequest) returns (LogResponse) {}
  rpc Test (TestRequest) returns (stream TestResponse) {}
  rpc BatchSendLogs(stream LogRequest) returns (BatchLogResponse) {}
  rpc ConnectClient(stream ClientMessage) returns (stream ServerMessage) {}
}
message TestRequest {}
message TestResponse {
  string message = 1;
  string timestamp = 2;
}
service UserService {
  rpc CreateUser(CreateUserRequest) returns (User) {}
  rpc GetUser(GetUserRequest) returns (User) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc UpdateUserAccountType(UpdateUserAccountTypeRequest) returns (User) {}
  rpc CheckUserQuota(GetUserRequest) returns (QuotaResponse) {}
}
message QuotaResponse {
  string account_type = 1;
  int32 project_count = 2;
  int32 project_limit = 3;
  int32 log_count_last_minute = 4;
  int32 log_limit_per_minute = 5;
  string last_log_time = 6;
}

service ProjectService {
  rpc CreateProject(CreateProjectRequest) returns (Project) {}
  rpc GetProject(GetProjectRequest) returns (Project) {}
  rpc DeleteProject(DeleteProjectRequest) returns (DeleteProjectResponse) {}
}

message LogRequest {
  string client_id = 1;
  string project_id = 2;
  string api_key = 3;
  string category = 4;
  string message = 5;
}

message LogResponse {
  bool success = 1;
  string message = 2;
}

message User {
  string id = 1;
  string user_id = 2;
  string client_id = 3;
  string account_type = 4;
  string created_at = 5;
}

message CreateUserRequest {
  string user_id = 1;
  string client_id = 2;
  string account_type = 3;
}

message GetUserRequest {
  string user_id = 1;
}
message DeleteUserRequest {
  string user_id = 1;
}
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message UpdateUserAccountTypeRequest {
  string user_id = 1;
  string account_type = 2;
}

message Project {
  string id = 1;
  string name = 2;
  string user_id = 3;
  string api_key = 4;
  string created_at = 5;
}

message CreateProjectRequest {
  string name = 1;
  string api_key = 2;
  string user_id = 3;
}

message GetProjectRequest {
  string project_id = 1;
}

message GetProjectResponse {
  string project_id = 1;
  string name = 2;
  string team_id = 3;
  string api_key = 4;
  string created_at = 5;
}

message DeleteProjectRequest {
  string project_id = 1;
  string user_id = 2;
}

message DeleteProjectResponse {
  bool success = 1;
  string message = 2;
}

message BatchLogResponse {
  bool success = 1;
  string message = 2;
  int32 count = 3;
}

message ClientMessage {
  oneof message {
    AuthRequest auth = 1;      // For initial authentication
    LogMessage log = 2;        // For sending logs
    HeartbeatMessage ping = 3; // For keeping connection alive
    CloseRequest close = 4;    // For closing connection
  }
}

message ServerMessage {
  oneof message {
    AuthResponse auth_response = 1;  // Authentication result
    LogResponse log_response = 2;    // Log receipt confirmation
    HeartbeatMessage pong = 3;       // Server heartbeat response
    ErrorMessage error = 4;          // Error notifications
  }
}

message AuthRequest {
  string client_id = 1;
  string project_id = 2;
  string api_key = 3;
}

message AuthResponse {
  bool success = 1;
  string session_id = 2;
  string message = 3;
}

message LogMessage {
  string category = 1;
  string message = 2;
  map<string, string> metadata = 3;
}

message HeartbeatMessage {
  int64 timestamp = 1;
}

message CloseRequest {
  string reason = 1;
}

message ErrorMessage {
  string code = 1;
  string message = 2;
}